refactor: Apply consistent code formatting across project